# Practice-Problems

./: .gitignore  README.md  pyproject.toml
src/practice_problems/01-20-2020/: 01-20-2020.md  solution.py  test_solution.py
src/practice_problems/solutions/: check_closed_brackets.py  run_length_encoding.py
src/practice_problems/tests/: test_check_closed_brackets.py  test_run_length_encoding.py
