[tool.poetry]
name = "practice-problems"
version = "0.1.0"
description = ""
authors = ["Taras Ivashchuk <taras@tarasivashchuk.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^5.3.2"
black = "^19.10b0"
mypy = "^0.761"
isort = "^4.3.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
